Changed header logo to % to px and adjusted the spacing.

--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
 			</div>
 		</div>
 
-		<a href="index.html"><img id="Webbanner" src="WebBanner/WebBanner.png" alt="SISLRA" width="25%" style="margin-left: 410px; margin-top: 8px; margin-bottom: 0%; position: absolute;"/></a>
+		<a href="index.html"><img id="Webbanner" src="WebBanner/WebBanner.png" alt="SISLRA" width="390px" style="margin-left: 400px; margin-top: 8px; margin-bottom: 0%; position: absolute;"/></a>
 
 		<table id="tableHeader" style="margin-top:13%;	border-radius: 10px; border: none; background: none;<!-- background: rgba(22, 22, 22, 0.5); -->">
 			<tr>
