Changed MeetingsAndEvents.html to Events.html and changed all pages linking to it. Changed MeetingsAndEvents folder to the Events folder and changed all pages linking to it. Removed meeting times and minutes from Events.html and navbar. Commented out Leftscrolling menu from Events.html.

--- a/src/Sponsors.html
+++ b/src/Sponsors.html
@@ -52,7 +52,7 @@
 		<table id="tableHeader">
 			<tr>
 				<td>
-					<h3><a href="MeetingsAndEvents.html#RaceSchedule"><span class="sislraDate"></span></a></h3>
+					<h3><a href="Events.html#RaceSchedule"><span class="sislraDate"></span></a></h3>
 				</td>
 				<td>
 					<h3><a href="http://www.northislandtimingassociation.com/" target="_blank"><span class="RumbleOnTheRunwayDate"></span></a></h3>
@@ -93,11 +93,10 @@
 						</ul>
 					</li>
 					<li><a href="Points.html">Points</a></li>
-					<li class="dropdown" ><a class="dropdown-toggle" data-toggle="dropdown" href="MeetingsAndEvents.html">Meetings & Events <span class="caret"></span></a>
+					<li class="dropdown" ><a class="dropdown-toggle" data-toggle="dropdown" href="Events.html">Events <span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="MeetingsAndEvents.html">Race Schedule</a></li>
-							<li><a href="MeetingsAndEvents.html#Posters">Posters</a></li>
-							<li><a href="MeetingsAndEvents.html#MeetingsAndMinutes">Meetings And Minutes</a></li>
+							<li><a href="Events.html">Race Schedule</a></li>
+							<li><a href="Events.html#Posters">Posters</a></li>
 						</ul>
 					</li>
 					<li class="active"><a href="Sponsors.html">Sponsors</a></li>
