--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
 		<table id="tableHeader" style="margin-top:13%;	border-radius: 10px; border: none; background: none;<!-- background: rgba(22, 22, 22, 0.5); -->">
 			<tr>
 				<td>
-					<h3><a href="MeetingsAndEvents.html#RaceSchedule"><span class="sislraDate"></span></a></h3>
+					<h3><a href="Events.html#RaceSchedule"><span class="sislraDate"></span></a></h3>
 				</td>
 				<td>
 					<h3><a href="http://www.northislandtimingassociation.com/" target="_blank"><span class="RumbleOnTheRunwayDate"></span></a></h3>
@@ -130,11 +130,10 @@
 						</ul>
 					</li>
 					<li><a href="Points.html">Points</a></li>
-					<li class="dropdown" ><a class="dropdown-toggle" data-toggle="dropdown" href="MeetingsAndEvents.html">Meetings & Events <span class="caret"></span></a>
+					<li class="dropdown" ><a class="dropdown-toggle" data-toggle="dropdown" href="Events.html">Events <span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="MeetingsAndEvents.html">Race Schedule</a></li>
-							<li><a href="MeetingsAndEvents.html#Posters">Posters</a></li>
-							<li><a href="MeetingsAndEvents.html#MeetingsAndMinutes">Meetings And Minutes</a></li>
+							<li><a href="Events.html">Race Schedule</a></li>
+							<li><a href="Events.html#Posters">Posters</a></li>
 						</ul>
 					</li>
 					<li><a href="Sponsors.html">Sponsors</a></li>
@@ -163,7 +162,7 @@
 		<h3><a href="Points.html"><span class="glyphicons glyphicons-coins"></span>Points</a></h3>
 		<p style="margin: 0px; margin-bottom: 5px; margin-left:8px;">Updated as of: <span id="PointsUpdate"></p>
 
-		<h3><a href="MeetingsAndEvents.html#RaceSchedule"><span class="glyphicons glyphicons-calendar"></span>2017 Schedule:</a></h3>
+		<h3><a href="Events.html#RaceSchedule"><span class="glyphicons glyphicons-calendar"></span>2017 Schedule:</a></h3>
 		<ul id="schedule">
 			<li  style="color: #0CF;">Apr 23 -Points -Cars, Bikes & Students</li>
 			<li>Apr 30 -Points -Cars, Bikes & Students</li>
@@ -284,7 +283,7 @@
 		<h1><a href="http://www.used.ca/" target="_blank">Welcome Used.ca</a></h1>
 		<p>Thank you to <a href="http://www.used.ca/" target="_blank">Used.ca</a> for signing on as a 2017 sponsor</p>	
 		
-		<h1><a href="MeetingsAndEvents.html#RaceSchedule">2017 Race Schedule</a></h1>
+		<h1><a href="Events.html#RaceSchedule">2017 Race Schedule</a></h1>
 		<p>It's Here! Mark your Calendars.</p>
 		
 		<h1>Sponsorship Coordinator</h1>
