--- a/src/Events.html
+++ b/src/Events.html
@@ -4,14 +4,14 @@
 
 <head>
 
-	<title>SISLRA</title>
+	<title>SISLRA/Meeting & Events</title>
 	<link rel="icon" href="Favicon/16ChristmasTree.ico">
 	<!-- CSS -->
 	<link rel="stylesheet" href="Bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" href="Bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="Bootstrap/css/bootstrap-theme.css">
 	<link rel="stylesheet" href="Bootstrap/css/bootstrap-theme.min.css">
-		
+	
 	<link rel="stylesheet" href="Glyphicons/glyphicons-social/web/html_css/css/glyphicons-social.css">
 	<link rel="stylesheet" href="Glyphicons/glyphicons-filetypes/web/html_css/css/glyphicons-filetypes.css">
 	<link rel="stylesheet" href="Glyphicons/glyphicons/web/html_css/css/glyphicons.css">
@@ -21,11 +21,15 @@
 	<script src="JavaScript/Countdown_SISLRA.js"></script>
 	<script src="JavaScript/Countdown_PortMcNeill.js"></script>
 	<script src="JavaScript/Countdown_PortAlberni.js"></script>
+	
+	<script src="JavaScript/jquery.js"></script>
+	<script src="JavaScript/scrollingBoxRight.js"></script>
+	<!-- <script src="JavaScript/scrollingBoxLeftEvents.js"></script> -->
 
 	<script src="Bootstrap/js/bootstrap.js"></script>
 	<script src="Bootstrap/js/bootstrap.min.js"></script>
 	
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
@@ -34,17 +38,18 @@
 
 <div id="wrapper">
 
-		<div id="header">
-			<div class="marquee">
-				<div>
-					<span class="marqueeInfo"></span>
-					<span class="marqueeInfo"></span>
-				</div>
+	<div id="header">
+	
+		<div class="marquee">
+			<div>
+				<span class="marqueeInfo"></span>
+				<span class="marqueeInfo"></span>
 			</div>
-		
-			<a href="index.html"><img id="Webbanner" src="WebBanner/WebBanner.png" alt="SISLRA" width="25%" style="margin-left: 37%; margin-top: 1%; margin-bottom: 1%;"/></a>
-			
-			<table id="tableHeader">
+		</div>
+
+		<a href="index.html"><img id="Webbanner" src="WebBanner/WebBanner.png" alt="SISLRA" width="25%" style="margin-left: 37%; margin-top: 1%; margin-bottom: 1%;"/></a>
+
+		<table id="tableHeader">
 			<tr>
 				<td>
 					<h3><a href="Events.html#RaceSchedule"><span class="sislraDate"></span></a></h3>
@@ -68,7 +73,7 @@
 				</td>
 			</tr>
 		</table>
-		
+
 		<nav class="navbar navbar-inverse" style="margin-top:19px;">
 			<div class="container-fluid">
 				<ul class="nav navbar-nav">
@@ -88,15 +93,16 @@
 						</ul>
 					</li>
 					<li><a href="Points.html">Points</a></li>
-					<li class="dropdown" ><a class="dropdown-toggle" data-toggle="dropdown" href="Events.html">Events <span class="caret"></span></a>
+					<li class="dropdown, active" ><a class="dropdown-toggle" data-toggle="dropdown" href="Events.html">Events <span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="Events.html">Race Schedule</a></li>
 							<li><a href="Events.html#Posters">Posters</a></li>
+							<li><a href="Events.html#MeetingsAndMinutes">Meetings And Minutes</a></li>
 						</ul>
 					</li>
 					<li><a href="Sponsors.html">Sponsors</a></li>
 					<li><a href="ContactUs.html">Contact Us</a></li>
-					<li class="active"><a href="AboutUs.html">About Us</a></li>
+					<li><a href="AboutUs.html">About Us</a></li>
 					<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="filetypes filetypes-pdf"></span> PDF<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="RacersInfo/NewRacersInformation.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Racers Information</a></li>
@@ -113,62 +119,57 @@
 			</div>
 		</nav>
 	</div> <!-- end of header-->
-	
-	<div id="main-section">
-	
-		<div class="sidebarBox">
-			<div class="scrollingBox">
-				<a href="#"><img src="WebBanner/Top.png" alt="Arrow Up" width="30" height="30"></a>
-			</div>
-		</div>
 
-	<!--<div id="left">
-    </div> <!-- end of left -->
-	
+	<div id="main-section">
+
+	<!-- This div is run by Java Script -->
+	<div class="sidebarBox">
+		<div class="scrollingBox">
+			<a href="#"><img src="WebBanner/Top.png"  alt="Arrow Up" width="30" height="30"></a>
+		</div>
+	</div>
+  
+<!--
+	<div id="leftScrolling">
+		<div class="sidebarBoxLeftEvents">
+			<div class="scrollingBoxLeftEvents">
+				<ul id="contents">
+					<li><h3 style="color: #999;"><span class="glyphicons glyphicons-notes"></span> Contents:</h3></li>
+					<li><a href="#RaceSchedule">Race Schedule</a></li>
+					<li><a href="#Posters">Posters</a></li>
+					<li><a href="#MeetingsAndMinutes">Meetings And Minutes</a></li>
+				</ul>
+			</div>
+		</div> -->
+	<!-- </div>  <!-- end of left -->
+
 	<!-- <div id="right">
- 	</div> <!-- end of right -->
+	</div> <!-- end of right -->
 	 
 	<div id="center">
-	
-	<br>
-	
-	<img src="WebBanner/AboutUs.png" alt="" width="560" height="193">
-	
-	<table>
-		<tr>
-			<td>
-				<p><strong>SISLRA</strong> is focused on saving lives and is concentrating efforts to attract 'street racers' to our sanctioned drag race  venue. Students, non students and racers  of all ages are encouraged to come to the drags.  No previous experience is needed.  There are club members and track officials to  explain the finer details of this exciting type of motor sport.</p>
-				<p>South Island Straight Liners Racing Association was formed back in the summer of 1980. A small handful of car and hot rod enthusiasts had a desire to test their cars, and held their meeting in a small area above a local body shop. </p>
-				<p>The club created a very simple and basic constitution:</p>
-				<p><em><strong>Club's constitution</strong></em></p>
-				<ul>
-					<li>1. The name of the Society is:</li>
-					<li>South Island Straight Liners Racing Association</li>
-					<li>2.The purposes of the Society are:</li>
-					<li style="margin-left:10px;">a) To promote high performance motor   vehicle safety on Vancouver Island.</li>
-					<li style="margin-left:10px;">b) To promote motor vehicle   soundness.</li>
-					<li style="margin-left:10px;">c) To test high performance motor vehicles in a controlled environment.</li>
-					<li style="margin-left:10px;">d) To eventually establish a permanent high performance motor vehicle testing facility (1/4 mile drag &nbsp;&nbsp;&nbsp;&nbsp; strip).</li>
-					<li style="margin-left:10px;">e) To provide for the interchange of information and/or parts.</li>
-					<li style="margin-left:10px;">f) To hold regular fund raising events such as dances, raffles, and other such events.</li>
-					<li style="margin-left:10px;">g) To co-operate with other societies with similar interests.</li>
-					<li style="margin-left:10px;">h) To gather together on a regular basis to carry out the above purposes, to plan, and to organize the &nbsp;&nbsp;&nbsp;&nbsp; above.</li>
-				</ul>
-			</td>
-		</tr>
-	</table>
-	
-	<br>
-	
-	<h1 id="LOCATEDAT">LOCATED AT:</h1>
-	<p>Western Speedway 2207 Millstream Rd, Victoria, B.C. Canada.</p>
-	<p>HWY-1 take Exit 14 (Millstream Rd North, toward Highlands/Langford) to Millstream Rd. Continue North/West on Millstream Rd. for 2.54 km until 
-		you reach Western Speedway 2207 Millstream Rd. Victoria, B.C. V9B-6H4</p>
-	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2645.2686272832516!2d-123.50331089999999!3d48.4705608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548f0d506c5c3a71%3A0xd20cbb669f2015f7!2s2207+Millstream+Rd%2C+Victoria%2C+BC+V9B+6H4!5e0!3m2!1sen!2sca!4v1455568106379" width="580" height="480" frameborder="5px" style="border:5px" allowfullscreen></iframe>
 
-	<br>
-	<br>
-	
+		<h1 id="RaceSchedule" style="margin-top: 0px;">Race Schedule</h1>
+		<img src="Events/RaceSchedule.jpg" alt="Race Schedule" width="590" height="190">
+		<p>Both the Schedule and the Poster can be printed out or picked up on race day.</p>
+
+		<br>
+		<h1 id="Posters">Posters (Click To See)</h1>
+		<img style="display: inline; vertical-align: middle; margin: 0px;" id="YearPoster" class="Poster" src="Events/YearPoster.jpg" alt="Race Schedule" width="200" height="300">
+		<img style="display: inline; vertical-align: middle; margin: 0px;" id="StreetCarShootoutPoster" class="Poster" src="Events/StreetCarShootout.jpg" alt="Street Car Shootout" width="200" height="300">
+
+		<!-- The Modal -->
+		<div id="myModal" class="modal">
+			<span class="close">X</span>
+			<img class="modal-content" id="img01">
+			<div id="caption"></div>
+		</div>
+		
+		<script src="JavaScript/YearPosterModal.js"></script> <!-- Has To Be Here To Run Modal -->
+		<script src="JavaScript/StreetCarShootoutModal.js"></script> <!-- Has To Be Here To Run Modal -->
+
+		<br>
+    <br>
+
 	</div> <!-- end of center -->
 		
 	</div> <!-- end of main section -->
@@ -254,9 +255,9 @@
 			</div>
 		</div>
 	</div> <!-- end of footer -->
-		
+
 </div> <!-- end of wrapper -->
-		
+
 </body>
 
 </html>
