--- a/src/404.html
+++ b/src/404.html
@@ -5,7 +5,7 @@
 <head>
 
 	<title>404!</title>
-	<link rel="icon" href="Favicon/16ChristmasTree.ico">
+	<link rel="icon" href="/Favicon/16ChristmasTree.ico">
 	<!-- CSS -->
 	<link rel="stylesheet" href="/Bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" href="/Bootstrap/css/bootstrap.min.css">
@@ -43,12 +43,12 @@
 			</div>
 		</div>
 
-		<a href="index.html"><img id="Webbanner" src="WebBanner/WebBanner.png" alt="SISLRA" width="25%" style="margin-left: 37%; margin-top: 1%; margin-bottom: 1%;"/></a>
+		<a href="/"><img id="Webbanner" src="/WebBanner/WebBanner.png" alt="SISLRA" width="25%" style="margin-left: 37%; margin-top: 1%; margin-bottom: 1%;"/></a>
 
 		<table id="tableHeader">
 			<tr>
 				<td>
-					<h3><a href="Events.html#RaceSchedule"><span class="sislraDate"></span></a></h3>
+					<h3><a href="/Events.html#RaceSchedule"><span class="sislraDate"></span></a></h3>
 				</td>
 				<td>
 					<h3><a href="http://www.northislandtimingassociation.com/" target="_blank"><span class="RumbleOnTheRunwayDate"></span></a></h3>
@@ -61,7 +61,7 @@
 				<td>
 					<div id="SISLRARace">&nbsp;</div>
 				</td>
-				<td>
+				<td><!--<div id="PortMcNeill">&nbsp;</div>-->
 					<div id="PortMcNeill">&nbsp;</div>
 				</td>
 				<td>
@@ -73,7 +73,7 @@
 		<nav class="navbar navbar-inverse" style="margin-top:19px;">
 			<div class="container-fluid">
 				<ul class="nav navbar-nav">
-					<li><a href="/index.html"><span class="glyphicon glyphicon-home"></span></a></li>
+					<li><a href="/"><span class="glyphicon glyphicon-home"></span></a></li>
 					<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="/RacerInfo.html">Racer Info <span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="/RacerInfo.html">Fees</a></li>
@@ -88,7 +88,7 @@
 							<li><a href="/RacerInfo.html#Tree">Tree</a></li>
 						</ul>
 					</li>
-					<li><a href="Points.html">Points</a></li>
+					<li><a href="/Points.html">Points</a></li>
 					<li class="dropdown" ><a class="dropdown-toggle" data-toggle="dropdown" href="/Events.html">Events <span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="/Events.html">Race Schedule</a></li>
@@ -133,86 +133,86 @@
 
 	</div> <!-- end of main section -->
 
-	<div id="footer">
+	<div id="footer" style="margin-bottom: -8px; z-index: 2;">
 
 		<div class="footer-row">
-			<div class="footer-section"></div>
 			<div class="footer-section">
-				<img id="Webbanner" src="/WebBanner/WebBanner.png" alt="SISLRA" width="100%" style="margin-left: -55%; margin-top: 0%; margin-bottom: 0%;"/>
+				<img id="Webbanner" src="/WebBanner/WebBanner.png" alt="SISLRA" width="280px" style="margin-left: 100px; margin-top: 0%; margin-bottom: 0%;"/>
 			</div>
 				<div class="footer-section">
-				<div style="margin-top: 0%; margin-bottom: 0%; margin-left: -53%; margin_right: 0%;">
-					<a id="Social-Media-Footer-Facebook" href="https://www.facebook.com/groups/327092727329942/" target="_blank" style="margin-top: 0%; margin-bottom: 0%; margin-left: 34%; margin_right: 0%;"><span class="social social-facebook x2"></span></a>
-					<ul style="margin-left: 24%;">
-						<li style="display: inline;"><a href="/index.html">Home</a></li>
+				<div style="margin-left: 78px;">
+					<a id="Social-Media-Footer-Facebook" href="https://www.facebook.com/groups/327092727329942/" target="_blank" style="margin: 0px; margin-left: 10px;"><span class="social social-facebook x2"></span></a>
+          <a id="Social-Media-Footer-Youtube" href="https://twitter.com/DragRaceVic" target="_blank" style="margin-top: 0%; margin: 0px;"><span class="social social-twitter x2"></span></a>
+				<a id="Social-Media-Footer-Youtube" href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank" style="margin: 0px;"><span class="social social-instagram x2"></span></a>
+				<a id="Social-Media-Footer-Youtube" href="https://www.youtube.com/user/nostopinLucR" target="_blank" style="margin: 0px;"><span class="social social-youtube x2"></span></a>
+					<ul style="margin-left: -29px;">
+						<li style="display: inline;"><a href="/">Home</a></li>
 						<li style="display: inline;"> | </li>
 						<li style="display: inline;"><a href="/Points.html">Points</a></li>
 						<li style="display: inline;"> | </li>
 						<li style="display: inline;"><a href="/Sponsors.html">Sponsors</a></li>
 					</ul>
-					<ul>
-						<li style="display: inline; margin-left: 30%;"><a href="/ContactUs.html">Contact Us</a></li>
+					<ul style="margin-left: -15px;">
+						<li style="display: inline; margin-left: 0%;"><a href="/ContactUs.html">Contact Us</a></li>
 						<li style="display: inline;"> | </li>
+            <li style="display: inline; margin-left: 0%;"><a href="/AboutUs.html">About Us</a></li>
 					</ul>
 				</div>
 			</div>
 			<div class="footer-section">
-				<a id="Social-Media-Footer-Youtube" href="https://twitter.com/DragRaceVic" target="_blank" style="margin-top: 0%; margin-bottom: 0%; margin-left: -93%; margin_right: 0%;"><span class="social social-twitter x2"></span></a>
-				<a id="Social-Media-Footer-Youtube" href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank" style="margin-top: 0%; margin-bottom: 0%; margin-left: 0%; margin_right: 0%;"><span class="social social-instagram x2"></span></a>
-				<a id="Social-Media-Footer-Youtube" href="https://www.youtube.com/user/nostopinLucR" target="_blank" style="margin-top: 0%; margin-bottom: 0%; margin-left: 0%; margin_right: 0%;"><span class="social social-youtube x2"></span></a>
-				<ul>
-					<li style="display: inline; margin-left: -35%;"></li>
-				</ul>
-				<ul>
-					<li style="display: inline; margin-left: -87%;"><a href="/AboutUs.html">About Us</a></li>
-				</ul>
-			</div>
-			<div class="footer-section">
-				<div style="position: relative; margin-top: 25%; margin-left: -50%;">
+				<div style="position: relative; margin-top: 48px; margin-left: 70px;">
 					<img id="spin" src="/WebBanner/DragTire.png" alt="Drag Tire"/>
 					<img id="smoke" src="/WebBanner/smoke.png"  alt="Tire Smoke"/>
 				</div>
 			</div>
 		</div>
-		<div class="footer-row">
-			<div class="footer-section-2">
-				<h3><a href="/Sponsors.html"><span class="glyphicons glyphicons-group"></span> Sponsors</a></h3>
-				<a href="http://searlesauto.ca/" target="_blank"><img src="/Sponsors/Searles.jpg" alt="Searles Auto" width="200" height="110" /></a>
-			</div>
-			<div class="footer-section-2">
-				<h3>&nbsp;</h3>
-				<a href="http://www.lordco.com/" target="_blank"><img src="/Sponsors/Lordco.png" alt="Lordco" width="200" height="80"></a>
-			</div>
-			<div class="footer-section-2">
-				<h3>&nbsp;</h3>
-				<a href="http://www.westshoretowing.com/" target="_blank"><img id="WestshoreTowing-Footer" src="/Sponsors/WestshoreTowing.jpg" alt="Westshore Towing" width="160" height="120"></a>
-			</div>
-			<div class="footer-section-2">
-				<h3>&nbsp;</h3>
-				<a href="http://www.kmstools.com/" target="_blank"><img src="/Sponsors/KMSToolsNoBack.gif" alt="KMS Tools" width="190" height="70" /></a>
-			</div>
-			<div class="footer-section-2">
-				<h3>&nbsp;</h3>
-				<a href="http://www.382sign.com/" target="_blank"><img src="/Sponsors/GraphicFX.png" alt="Graphic FX" width="200" height="80"/></a>
-			</div>
-		</div>
-		<div class="footer-row">
-			<div class="footer-section-2">
-				<a href="http://bdlifttruck.ca/" target="_blank"><img src="/Sponsors/BandDForklift-300x87.jpg" alt="B&D Forklift" width="210" height="110" /></a>
-			</div>
-			<div class="footer-section-2">
-				<a href="http://www.dentexpdr.com/" target="_blank"><img src="/Sponsors/DentexNoBack.png" alt="Dentex" width="210" height="100" /></a>
-			</div>
-			<div class="footer-section-2">
-				<a href="http://www.used.ca/" target="_blank"><img src="/Sponsors/Used_Logo_Purple.png" alt="Used_Logo_Purple" width="190" height="100" /></a>
-			</div>
-			<div class="footer-section-2">
-				<a href="http://vicmobile.com/" target="_blank"><img id="VictoriaMobile-Footer" src="/Sponsors/VictoriaMobileRadio.JPG" alt="Victoria Mobile Radio" width="190" height="110" /></a>
-			</div>
-			<div class="footer-section-2">
-				<a href="https://www.hsminsurance.com/" target="_blank"><img src="/Sponsors/HenrdrySwinton.jpg" alt="Henrdry Swinton" width="190" height="110" /></a>
-			</div>
-		</div>
+  </div>
+    
+  <div id="footer">
+      <div class="footer-row">
+        <div class="footer-section-2">
+          <h3><a href="Sponsors.html"><span class="glyphicons glyphicons-group"></span> Sponsors</a></h3>
+          <a href="http://searlesauto.ca/" target="_blank"><img src="/Sponsors/Searles.jpg" alt="Searles Auto" width="200" height="110" /></a>
+        </div>
+        <div class="footer-section-2">
+          <h3>&nbsp;</h3>
+          <a href="http://www.lordco.com/" target="_blank"><img src="/Sponsors/Lordco.png" alt="Lordco" width="200" height="80"></a>
+        </div>
+        <div class="footer-section-2">
+          <h3>&nbsp;</h3>
+          <a href="http://bdlifttruck.ca/" target="_blank"><img src="/Sponsors/BandDForklift-300x87.jpg" alt="B&D Forklift" width="210" height="110" /></a>
+        </div>
+        <div class="footer-section-2">
+          <h3>&nbsp;</h3>
+          <a href="http://www.kmstools.com/" target="_blank"><img src="/Sponsors/KMSToolsNoBack.gif" alt="KMS Tools" width="190" height="70" /></a>
+        </div>
+        <div class="footer-section-2">
+          <h3>&nbsp;</h3>
+          <a href="http://www.382sign.com/" target="_blank"><img src="/Sponsors/GraphicFX.png" alt="Graphic FX" width="200" height="80"/></a>
+        </div>
+      </div>
+      <div class="footer-row">
+        <div class="footer-section-2">
+          <a href="http://www.dentexpdr.com/" target="_blank"><img src="/Sponsors/DentexNoBack.png" alt="Dentex" width="210" height="100" /></a>
+        </div>
+        <div class="footer-section-2">
+          <a href="http://www.used.ca/" target="_blank"><img src="/Sponsors/Used_Logo_Purple.png" alt="Used_Logo_Purple" width="190" height="100" /></a>
+        </div>
+        <div class="footer-section-2">
+          <a href="http://vicmobile.com/" target="_blank"><img id="VictoriaMobile-Footer" src="/Sponsors/VictoriaMobileRadio.JPG" alt="Victoria Mobile Radio" width="190" height="110" /></a>
+        </div>
+        <div class="footer-section-2">
+          <a href="https://www.hsminsurance.com/" target="_blank"><img src="/Sponsors/HenrdrySwinton.jpg" alt="Henrdry Swinton" width="190" height="110" /></a>
+        </div>
+     </div>
+  </div>
+      
+  <div id="footer" style="margin-top: -10px;">
+    <div class="footer-row">
+      <div class="footer-section">
+        <p style="margin-left: 41%; margin-bottom: 10px; margin-top: 10px; font-size: 12px; color: fff;"> Copyright &copy; 2005<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>, All rights reserved.</p>
+      </div>
+    </div>
 	</div> <!-- end of footer -->
 
 </div> <!-- end of wrapper -->
