fixed back to top not working on aboutUs.html. simplified slides in index.html. fixed class confusion with myslides in index.html and myslides in Points.html

--- a/src/AboutUs.html
+++ b/src/AboutUs.html
@@ -18,6 +18,7 @@
 	
 	<link rel="stylesheet" href="/CSS/SISLRA.css">
 	<!-- JavaScript -->
+  <script src="/JavaScript/jquery.js"></script>
   <script src="/JavaScript/scrollingBoxRight.js"></script>
   
 	<script src="/JavaScript/Countdown_SISLRA.js"></script>
