--- a/src/Points.html
+++ b/src/Points.html
@@ -147,8 +147,8 @@
 	<h2>Points Updated as of: <span id="PointsUpdate"></h2>
 	
 	<div class="w3-content" style="max-width:800px">
-		<img class="mySlides" src="Points/ProPoints.png" alt="Pro Points" width="943" height="490" />
-		<img class="mySlides" src="Points/StreetPoints.png" alt="StreetPoints" width="943" height="490" />
+		<img class="mySlidesPoints" src="Points/ProPoints.png" alt="Pro Points" width="943" height="490" />
+		<img class="mySlidesPoints" src="Points/StreetPoints.png" alt="StreetPoints" width="943" height="490" />
 	</div>
 
 	<div class="w3-center">
@@ -170,7 +170,7 @@
 
 	function showDivs(n) {
 	  var i;
-	  var x = document.getElementsByClassName("mySlides");
+	  var x = document.getElementsByClassName("mySlidesPoints");
 	  var dots = document.getElementsByClassName("demo");
 	  if (n > x.length) {slideIndex = 1}    
 	  if (n < 1) {slideIndex = x.length}
