--- a/src/index.html
+++ b/src/index.html
@@ -36,31 +36,30 @@
 
 	<div id="header">
 		
-		<div style="z-index:-2; position: absolute;">
-			<!-- <img class="mySlides" src="WebBanner/Untitled-1.png" style="width:1200px; height:250px;"> -->
-			<img class="mySlides" src="/WebBanner/Untitled-2.png" style="width:1200px; height:250px;">
-			<img class="mySlides" src="/WebBanner/Untitled-3.png" style="width:1200px; height:250px;">
-			<img class="mySlides" src="/WebBanner/Untitled-4.png" style="width:1200px; height:250px;">
-			<img class="mySlides" src="/WebBanner/Untitled-5.png" style="width:1200px; height:250px;">
-			<img class="mySlides" src="/WebBanner/Untitled-6.png" style="width:1200px; height:250px;">
-			<img class="mySlides" src="/WebBanner/Untitled-7.png" style="width:1200px; height:250px;">
-			<img class="mySlides" src="/WebBanner/Untitled-8.png" style="width:1200px; height:250px;">
-			<img class="mySlides" src="/WebBanner/Untitled-9.png" style="width:1200px; height:250px;">
-			<img class="mySlides" src="/WebBanner/Untitled-10.png" style="width:1200px; height:250px;">
-			<img class="mySlides" src="/WebBanner/Untitled-11.png" style="width:1200px; height:250px;">
-			<img class="mySlides" src="/WebBanner/Untitled-12.png" style="width:1200px; height:250px;">
-			<img class="mySlides" src="/WebBanner/Untitled-13.png" style="width:1200px; height:250px;">
-			<img class="mySlides" src="/WebBanner/Untitled-14.png" style="width:1200px; height:250px;">
-			<img class="mySlides" src="/WebBanner/Untitled-15.png" style="width:1200px; height:250px;">
-			<img class="mySlides" src="/WebBanner/Untitled-16.png" style="width:1200px; height:250px;">
-			<img class="mySlides" src="/WebBanner/Untitled-17.png" style="width:1200px; height:250px;">
-			<img class="mySlides" src="/WebBanner/Untitled-18.png" style="width:1200px; height:250px;">
+		<div id="mySlidesDiv">
+			<img class="mySlides" src="/WebBanner/Untitled-2.png">
+			<img class="mySlides" src="/WebBanner/Untitled-3.png">
+			<img class="mySlides" src="/WebBanner/Untitled-4.png">
+			<img class="mySlides" src="/WebBanner/Untitled-5.png">
+			<img class="mySlides" src="/WebBanner/Untitled-6.png">
+			<img class="mySlides" src="/WebBanner/Untitled-7.png">
+			<img class="mySlides" src="/WebBanner/Untitled-8.png">
+			<img class="mySlides" src="/WebBanner/Untitled-9.png">
+			<img class="mySlides" src="/WebBanner/Untitled-10.png">
+			<img class="mySlides" src="/WebBanner/Untitled-11.png">
+			<img class="mySlides" src="/WebBanner/Untitled-12.png">
+			<img class="mySlides" src="/WebBanner/Untitled-13.png">
+			<img class="mySlides" src="/WebBanner/Untitled-14.png">
+			<img class="mySlides" src="/WebBanner/Untitled-15.png">
+			<img class="mySlides" src="/WebBanner/Untitled-16.png">
+			<img class="mySlides" src="/WebBanner/Untitled-17.png">
+			<img class="mySlides" src="/WebBanner/Untitled-18.png">
 		</div>
 		
-		<span style="width:1200px; height:250px; z-index:-1; position: absolute; background: rgba(22, 22, 22, 0.5);"></span>
+		<span id="shade"></span>
 		<script src="/JavaScript/indexSlides.js"></script>
 		
-		<div class="marquee" style="margin:0px; border:none; border-radius: 0px 0px 0px 0px; <!-- background: rgba(22, 22, 22, 0.5); -->">
+		<div class="marquee" style="margin:0px; border:none; border-radius: 0px 0px 0px 0px;">
 			<div>
 				<span class="marqueeInfo"></span>
 				<span class="marqueeInfo"></span>
