-Added custom js to automate the countdown timers and the schedule on index page. -Renamed WebBanner file to SISLRA. Combined all scrolling box js into one. -Cleaned out unused files from Glyphicons folder. -Footer is now "included" in every page using W3C js (thinking about doing the same to Navbar). -404.html now has countdown to redirect to index.html. -Changed Slides format from png to jpg to help decrease load time. -Moved footer.css in sislra.css. -Updated to SISLRA 2017 sponsors. -Alot of code clean up (removing unused code), file clean up and small adjustments.

--- a/src/RacerInfo.html
+++ b/src/RacerInfo.html
@@ -13,27 +13,22 @@
   <link rel="stylesheet" href="/Bootstrap/css/bootstrap-theme.css">
   <link rel="stylesheet" href="/Bootstrap/css/bootstrap-theme.min.css">
 
-  <link rel="stylesheet" href="/Glyphicons/glyphicons-social/web/html_css/css/glyphicons-social.css">
-  <link rel="stylesheet" href="/Glyphicons/glyphicons-filetypes/web/html_css/css/glyphicons-filetypes.css">
-  <link rel="stylesheet" href="/Glyphicons/glyphicons/web/html_css/css/glyphicons.css">
+  <link rel="stylesheet" href="/Glyphicons/glyphicons-social/css/glyphicons-social.css">
+  <link rel="stylesheet" href="/Glyphicons/glyphicons-filetypes/css/glyphicons-filetypes.css">
+  <link rel="stylesheet" href="/Glyphicons/glyphicons/css/glyphicons.css">
 
   <link rel="stylesheet" href="/CSS/SISLRA.css">
-  <link rel="stylesheet" href="/CSS/SISLRAFooter.css">
 
   <!-- JavaScript -->
-  <script src="/JavaScript/Countdown_SISLRA.js"></script>
-  <script src="/JavaScript/Countdown_PortMcNeill.js"></script>
-  <script src="/JavaScript/Countdown_PortAlberni.js"></script>
+  <script src="/JavaScript/Countdown.js"></script>
 
   <script src="/JavaScript/jquery.js"></script>
-  <script src="/JavaScript/scrollingBoxRight.js"></script>
-  <script src="/JavaScript/scrollingBoxLeft.js"></script>
+  <script src="/JavaScript/scrollingBox.js"></script>
+  
+  <script src="/JavaScript/W3HTMLInclude.js"></script>
 
   <script src="/Bootstrap/js/bootstrap.js"></script>
   <script src="/Bootstrap/js/bootstrap.min.js"></script>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
 
@@ -50,7 +45,7 @@
       </div>
     </div>
 
-    <a href="/"><img class="webbanner" src="/WebBanner/WebBanner.png" alt="SISLRA"></a>
+    <a href="/"><img class="webbanner" src="/SISLRA/WebBanner.png" alt="SISLRA"></a>
 
     <table id="tableHeader">
       <tr>
@@ -385,78 +380,12 @@
 
   </div> <!-- end of main section -->
 
-  <div id="footerSocial">
-    <div class="footer-row">
-      <div class="footer-section">
-        <img id="SISLRALogo-Footer" src="/WebBanner/WebBanner.png" alt="SISLRA"/>
-      </div>
-      <div class="footer-section">
-        <div id="SocialMediaDiv-Footer">
-          <a id="facebook-Footer" class="buttonHyperLink" href="https://www.facebook.com/groups/327092727329942/" target="_blank"><span class="social social-facebook x2"></span></a>
-          <a class="buttonHyperLink" href="https://twitter.com/DragRaceVic" target="_blank"><span class="social social-twitter x2"></span></a>
-          <a class="buttonHyperLink" href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank"><span class="social social-instagram x2"></span></a>
-          <a class="buttonHyperLink" href="https://www.youtube.com/user/nostopinLucR" target="_blank"><span class="social social-youtube x2"></span></a>
-          <ul>
-            <li><a href="/">Home</a></li>
-            <li> | </li>
-            <li><a href="/Points.html">Points</a></li>
-            <li> | </li>
-            <li><a href="/Sponsors.html">Sponsors</a></li>
-          </ul>
-          <ul>
-            <li><a href="/ContactUs.html">Contact Us</a></li>
-            <li> | </li>
-            <li><a href="/AboutUs.html">About Us</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="footer-section">
-        <div id="spiningTire">
-          <img id="spin" src="/WebBanner/DragTire.png" alt="Drag Tire"/>
-          <img id="smoke" src="/WebBanner/smoke.png"  alt="Tire Smoke"/>
-        </div>
-      </div>
-    </div>
-  </div>
-    
-  <div id="footerSponsors">
-      <div class="footer-row">
-        <div class="footer-section-2">
-          <h3><a href="Sponsors.html"><span class="glyphicons glyphicons-group"></span> Sponsors</a></h3>
-          <a href="http://searlesauto.ca/" target="_blank"><img src="/Sponsors/Searles.jpg" alt="Searles Auto" width="200" height="110"></a>
-        </div>
-        <div class="footer-section-2">
-          <h3>&nbsp;</h3>
-          <a href="http://www.lordco.com/" target="_blank"><img src="/Sponsors/Lordco.png" alt="Lordco" width="200" height="80"></a>
-        </div>
-        <div class="footer-section-2">
-          <h3>&nbsp;</h3>
-          <a href="http://bdlifttruck.ca/" target="_blank"><img src="/Sponsors/BandDForklift-300x87.jpg" alt="B&D Forklift" width="210" height="110"></a>
-        </div>
-        <div class="footer-section-2">
-          <h3>&nbsp;</h3>
-          <a href="http://www.kmstools.com/" target="_blank"><img src="/Sponsors/KMSToolsNoBack.gif" alt="KMS Tools" width="190" height="70"></a>
-        </div>
-        <div class="footer-section-2">
-          <h3>&nbsp;</h3>
-          <a href="http://www.382sign.com/" target="_blank"><img src="/Sponsors/GraphicFX.png" alt="Graphic FX" width="200" height="80"></a>
-        </div>
-      </div>
-      <div class="footer-row">
-        <div class="footer-section-2">
-          <a href="http://www.dentexpdr.com/" target="_blank"><img src="/Sponsors/DentexNoBack.png" alt="Dentex" width="210" height="100"></a>
-        </div>
-        <div class="footer-section-2">
-          <a href="http://www.used.ca/" target="_blank"><img src="/Sponsors/Used_Logo_Purple.png" alt="Used_Logo_Purple" width="190" height="100"></a>
-        </div>
-        <div class="footer-section-2">
-          <a href="http://vicmobile.com/" target="_blank"><img src="/Sponsors/VictoriaMobileRadio.JPG" alt="Victoria Mobile Radio" width="190" height="110"></a>
-        </div>
-        <div class="footer-section-2">
-          <a href="https://www.hsminsurance.com/" target="_blank"><img src="/Sponsors/HenrdrySwinton.jpg" alt="Henrdry Swinton" width="190" height="110"></a>
-        </div>
-     </div>
-  </div>
+  <div w3-include-html="footerSocial.html"></div> <!-- Start Of Footer -->
+  <div w3-include-html="footerSponsors.html"></div>
+  
+  <script>
+  w3IncludeHTML();
+  </script>
       
   <div id="footerCopyright">
     <div class="footer-row">
