Changed membership wording with reference to membership in RacerInfo.html

--- a/src/Points.html
+++ b/src/Points.html
@@ -137,10 +137,10 @@
 
   <div id="center">
 
-  <h1 style="text-align: center;">Points Are Valid Only For Members.</h1>
+  <h1 style="text-align: center;"><a href="/RacerInfo.html#Memberships">Points Are Valid Only For Members.</a></h1>
   <p>To be eligible to compete in this season's Points Competition you must be a registered SISLRA member.
-  Only races raced after your membership is paid, are eligible to be counted in the competition. Please see Bill
-  Jamieson on race day to purchase your membership.</p>
+  Only races raced after your membership is paid, are eligible to be counted in the competition. For more infomation on <a href="/RacerInfo.html#Memberships">memberships click here.</a> Or see Bill
+  Jamieson on race day to purchase your <a href="/RacerInfo.html#Memberships">membership.</a></p>
   <h2>Points Updated as of: <span id="PointsUpdate"></span></h2>
   
   <!-- <div style="max-width:800px; margin-left: 180px;"> -->
