Code Clean up and fixes and minor modifications. Testing HTML Include on navBar.html in index.html. New redirect code for 404.html.

--- a/src/AboutUs.html
+++ b/src/AboutUs.html
@@ -45,7 +45,7 @@
       </div>
     </div>
     
-    <a href="/"><img class="webbanner" src="/SISLRA/WebBanner.png" alt="SISLRA"></a>
+    <a href="/"><img class="webbanner" src="/SISLRA/WebBanner.png" alt="SISLRA" /></a>
       
     <table id="tableHeader">
       <tr>
@@ -98,9 +98,33 @@
               <li><a href="/Events.html#Posters">Posters</a></li>
             </ul>
           </li>
-          <li><a href="/Sponsors.html">Sponsors</a></li>
-          <li><a href="/ContactUs.html">Contact Us</a></li>
-          <li class="active"><a href="/AboutUs.html">About Us</a></li>
+          <li class="dropdown"><a href="/Sponsors.html">Sponsors <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="/Sponsors.html#BandDForklift">B&D Forklift</a></li>
+              <li><a href="/Sponsors.html#Searles">Searles</a></li>
+              <li><a href="/Sponsors.html#GraphicFX">GraphicFX</a></li>
+              <li><a href="/Sponsors.html#Dentex">Dentex</a></li>
+              <li><a href="/Sponsors.html#Lordco">Lordco</a></li>
+              <li><a href="/Sponsors.html#Used.ca">Used.ca</a></li>
+              <li><a href="/Sponsors.html#WestBayMechanical">West Bay Mechanical</a></li>
+              <li><a href="/Sponsors.html#IslandTorque">Island Torque</a></li>
+              <li><a href="/Sponsors.html#MaMillersPub">MaMillers Pub</a></li>
+              <li><a href="/Sponsors.html#HenrdrySwinton">Henrdry Swinton</a></li>
+              <li><a href="/Sponsors.html#SponsorshipInformation">Sponsorship Info.</a></li>
+            </ul>
+          </li>
+          <li class="dropdown"><a href="/ContactUs.html">Contact Us <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="/ContactUs.html">Contact Us</a></li>
+              <li><a href="/ContactUs.html#links">Other Tracks and Clubs</a></li>
+            </ul>
+          </li>
+          <li class="dropdown active"><a href="/AboutUs.html">About Us <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="/AboutUs.html">About Us</a></li>
+              <li><a href="/AboutUs.html#LOCATEDAT">Location</a></li>
+            </ul>
+          </li>
           <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="filetypes filetypes-pdf"></span> PDF<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="/RacersInfo/NewRacersInformation.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Racers Information</a></li>
@@ -108,12 +132,12 @@
             </ul>
           </li>
         </ul>
-        <ul class="nav navbar-nav navbar-right">
+        <div class="nav navbar-nav navbar-right">
           <a href="https://www.facebook.com/groups/327092727329942/" target="_blank" class="btn btn-primary" role="button" data-toggle="tooltip" data-placement="bottom" title="Facebook" style="color: #FFF;  margin-top: 4%;"><span class="social social-facebook"></span></a>
           <a href="https://twitter.com/DragRaceVic" target="_blank" class="btn btn-info" role="button" data-toggle="tooltip" data-placement="bottom" title="Twitter" style="color: #FFF;  margin-top: 4%;"><span class="social social-twitter"></span></a>
           <a href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank" class="btn btn-default" role="button" data-toggle="tooltip" data-placement="bottom" title="Instagram" style="color: #000;  margin-top: 4%;"><span class="social social-instagram"></span></a>
           <a href="https://www.youtube.com/user/nostopinLucR" target="_blank" class="btn btn-danger" role="button" data-toggle="tooltip" data-placement="bottom" title="YouTube" style="color: #FFF; margin-top: 4%;"><span class="social social-youtube"></span></a>          &nbsp;
-        </ul>
+        </div>
       </div>
     </nav>
 
@@ -129,16 +153,16 @@
   </div>
 
   <!--<div id="left">
-    </div> <!-- end of left -->
+    </div> end of left -->
   
   <!-- <div id="right">
-   </div> <!-- end of right -->
+   </div> end of right -->
    
   <div id="center">
   
   <br>
   
-  <img src="/SISLRA/AboutUs.png" alt="AboutUs" width="560" height="193">
+  <img src="/SISLRA/AboutUs.png" alt="AboutUs" width="560" />
   
   <table>
     <tr>
@@ -150,18 +174,18 @@
         <ul>
           <li>1. The name of the Society is:</li>
           <li>&nbsp;&nbsp;&nbsp;&nbsp;South Island Straight Liners Racing Association</li>
-          <li>2.The purposes of the Society are:</li>
-          <div id="aboutUsli">
-            <li>a) To promote high performance motor vehicle safety on Vancouver Island.</li>
-            <li>b) To promote motor vehicle soundness.</li>
-            <li>c) To test high performance motor vehicles in a controlled environment.</li>
-            <li>d) To eventually establish a permanent high performance motor vehicle testing facility (1/4 mile drag &nbsp;&nbsp;&nbsp;&nbsp; strip).</li>
-            <li>e) To provide for the interchange of information and/or parts.</li>
-            <li>f) To hold regular fund raising events such as dances, raffles, and other such events.</li>
-            <li>g) To co-operate with other societies with similar interests.</li>
-            <li>h) To gather together on a regular basis to carry out the above purposes, to plan, and to organize the &nbsp;&nbsp;&nbsp;&nbsp; above.</li>
-          </div>
+          <li>2. The purposes of the Society are:</li>
         </ul>
+        <ol style="list-style-type:upper-alpha;Margin:0px;">
+          <li>To promote high performance motor vehicle safety on Vancouver Island.</li>
+          <li>To promote motor vehicle soundness.</li>
+          <li>To test high performance motor vehicles in a controlled environment.</li>
+          <li>To eventually establish a permanent high performance motor vehicle testing facility (1/4 mile drag strip).</li>
+          <li>To provide for the interchange of information and/or parts.</li>
+          <li>To hold regular fund raising events such as dances, raffles, and other such events.</li>
+          <li>To co-operate with other societies with similar interests.</li>
+          <li>To gather together on a regular basis to carry out the above purposes, to plan, and to organize the above.</li>
+        </ol>
       </td>
     </tr>
   </table>
@@ -172,7 +196,7 @@
   <p>Western Speedway 2207 Millstream Rd, Victoria, B.C. Canada.</p>
   <p>HWY-1 take Exit 14 (Millstream Rd North, toward Highlands/Langford) to Millstream Rd. Continue North/West on Millstream Rd. for 2.54 km until 
     you reach Western Speedway 2207 Millstream Rd. Victoria, B.C. V9B-6H4</p>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2645.2686272832516!2d-123.50331089999999!3d48.4705608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548f0d506c5c3a71%3A0xd20cbb669f2015f7!2s2207+Millstream+Rd%2C+Victoria%2C+BC+V9B+6H4!5e0!3m2!1sen!2sca!4v1455568106379" width="580" height="480" frameborder="5px" style="border:5px" allowfullscreen></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2645.2686272832516!2d-123.50331089999999!3d48.4705608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548f0d506c5c3a71%3A0xd20cbb669f2015f7!2s2207+Millstream+Rd%2C+Victoria%2C+BC+V9B+6H4!5e0!3m2!1sen!2sca!4v1455568106379" style="border:5px; width: 580px; height: 480px;" allowfullscreen></iframe>
 
   <br>
   <br>
