--- a/src/Sponsors.html
+++ b/src/Sponsors.html
@@ -45,7 +45,7 @@
       </div>
     </div>
 
-    <a href="/"><img class="webbanner" src="/SISLRA/WebBanner.png" alt="SISLRA"></a>
+    <a href="/"><img class="webbanner" src="/SISLRA/WebBanner.png" alt="SISLRA" /></a>
 
     <table id="tableHeader">
       <tr>
@@ -98,9 +98,33 @@
               <li><a href="/Events.html#Posters">Posters</a></li>
             </ul>
           </li>
-          <li class="active"><a href="/Sponsors.html">Sponsors</a></li>
-          <li><a href="/ContactUs.html">Contact Us</a></li>
-          <li><a href="/AboutUs.html">About Us</a></li>
+          <li class="dropdown active"><a href="/Sponsors.html">Sponsors <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="/Sponsors.html#BandDForklift">B&D Forklift</a></li>
+              <li><a href="/Sponsors.html#Searles">Searles</a></li>
+              <li><a href="/Sponsors.html#GraphicFX">GraphicFX</a></li>
+              <li><a href="/Sponsors.html#Dentex">Dentex</a></li>
+              <li><a href="/Sponsors.html#Lordco">Lordco</a></li>
+              <li><a href="/Sponsors.html#Used.ca">Used.ca</a></li>
+              <li><a href="/Sponsors.html#WestBayMechanical">West Bay Mechanical</a></li>
+              <li><a href="/Sponsors.html#IslandTorque">Island Torque</a></li>
+              <li><a href="/Sponsors.html#MaMillersPub">MaMillers Pub</a></li>
+              <li><a href="/Sponsors.html#HenrdrySwinton">Henrdry Swinton</a></li>
+              <li><a href="/Sponsors.html#SponsorshipInformation">Sponsorship Info.</a></li>
+            </ul>
+          </li>
+          <li class="dropdown"><a href="/ContactUs.html">Contact Us <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="/ContactUs.html">Contact Us</a></li>
+              <li><a href="/ContactUs.html#links">Other Tracks and Clubs</a></li>
+            </ul>
+          </li>
+          <li class="dropdown"><a href="/AboutUs.html">About Us <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="/AboutUs.html">About Us</a></li>
+              <li><a href="/AboutUs.html#LOCATEDAT">Location</a></li>
+            </ul>
+          </li>
           <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="filetypes filetypes-pdf"></span> PDF<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="/RacersInfo/NewRacersInformation.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Racers Information</a></li>
@@ -108,12 +132,12 @@
             </ul>
           </li>
         </ul>
-        <ul class="nav navbar-nav navbar-right">
+        <div class="nav navbar-nav navbar-right">
           <a href="https://www.facebook.com/groups/327092727329942/" target="_blank" class="btn btn-primary" role="button" data-toggle="tooltip" data-placement="bottom" title="Facebook" style="color: #FFF;  margin-top: 4%;"><span class="social social-facebook"></span></a>
           <a href="https://twitter.com/DragRaceVic" target="_blank" class="btn btn-info" role="button" data-toggle="tooltip" data-placement="bottom" title="Twitter" style="color: #FFF;  margin-top: 4%;"><span class="social social-twitter"></span></a>
           <a href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank" class="btn btn-default" role="button" data-toggle="tooltip" data-placement="bottom" title="Instagram" style="color: #000;  margin-top: 4%;"><span class="social social-instagram"></span></a>
           <a href="https://www.youtube.com/user/nostopinLucR" target="_blank" class="btn btn-danger" role="button" data-toggle="tooltip" data-placement="bottom" title="YouTube" style="color: #FFF; margin-top: 4%;"><span class="social social-youtube"></span></a>          &nbsp;
-        </ul>
+        </div>
       </div>
     </nav>
     
@@ -133,7 +157,6 @@
       <div class="scrollingBoxLeftSponsors">
         <ul id="contents">
           <li><h3 style="color: #999;"><span class="glyphicons glyphicons-group"></span> Sponsors:</h3></li>
-          <!-- <li><a href="#WestShoreTowing">Westshore Towing</a></li> -->
           <li><a href="#BandDForklift">B&D Forklift</a></li>
           <li><a href="#Searles">Searles</a></li>
           <li><a href="#GraphicFX">GraphicFX</a></li>
@@ -150,37 +173,37 @@
     </div>  <!-- end of left -->
 
   <!-- <div id="right">
-  </div> <!-- end of right -->
+  </div> end of right -->
 
   <div id="centerSponsors">
 
-  <h1>2016 Lane Sponsors</h1>
+  <h1>2017 Lane Sponsors</h1>
 
-  <table id="tableCenterSponsors" cellpadding="0px">
+  <table id="tableCenterSponsors">
     <tr>
-      <td align="center"><h3>Tower Lane Sponsored by:</h3></td>
+      <td style="text-align: center;"><h3>Tower Lane Sponsored by:</h3></td>
       <td>&nbsp;</td>
-      <td align="center"><h3>Pit Lane Sponsored by:</h3></td>
+      <td style="text-align: center;"><h3>Pit Lane Sponsored by:</h3></td>
     </tr>
     <tr>
       <td>
-        <a href="http://bdlifttruck.ca/" target="_blank"><img id="BandDForklift" src="/Sponsors/BandDForklift-300x87.jpg" alt="TowerLaneSponsor" width="300" height="150"></a>
+        <a href="http://bdlifttruck.ca/" target="_blank"><img id="BandDForklift" src="/Sponsors/BandDForklift-300x87.jpg" alt="TowerLaneSponsor" width="300" height="150" /></a>
       </td>
         <td>
-          <img src="/SISLRA/ChristmasTree.png" alt="Christmas Tree" width="200px" style="margin-left:50px; margin-right:50px;"/>
+          <img src="/SISLRA/ChristmasTree.png" alt="Christmas Tree" width="200" style="margin-left:50px; margin-right:50px;" />
         </td>
       <td>
-        <a href="http://searlesauto.ca/" target="_blank"><img id="Searles" src="/Sponsors/Searles.jpg" alt="PitLaneSponsor" width="380"/></a>
+        <a href="http://searlesauto.ca/" target="_blank"><img id="Searles" src="/Sponsors/Searles.jpg" alt="PitLaneSponsor" width="380" /></a>
       </td>
     </tr>
     <tr>
-      <td align="center">
+      <td style="text-align: center;">
           <p style="margin-top: -60px;">Celebrating 30 Years of Service; B&D Lift Truck Service Ltd. has been serving the forklift needs of Vancouver Island businesses' since 1984.
             They provide sales, rental, service and maintenance, and operator training. 100% family owned and operated, B&D Lift Truck Service Ltd. is 
             the Island's forklift specialist. Contact them at <a href="http://bdlifttruck.ca/" target="_blank">bdlifttruck.ca</a></p>
       </td>
       <td>&nbsp;</td>
-      <td align="center">
+      <td style="text-align: center;">
         <p style="margin-top: -5px;">In operation in since 1979, Searle's, is known by many for its quality work and honesty.
           With well trained mechanics, quality parts, and cutting edge diagnostics, they work on any make
           or model, specializing in Air Conditioning. Searle's Auto Repair is a member of the Better Business
@@ -193,46 +216,46 @@
 
   <h1>Supporting Sponsors:</h1>
   
-  <a href="http://www.382sign.com/" target="_blank"><img id="GraphicFX" src="/Sponsors/GraphicFX.png" alt="Graphic FX" width="400"/></a>
+  <a href="http://www.382sign.com/" target="_blank"><img id="GraphicFX" src="/Sponsors/GraphicFX.png" alt="Graphic FX" width="400" /></a>
   <p>Thanks goes out to Graphic FX Signworks for our Tower Schedule sign. Graphic FX specializes in professional and affordable
     vehicle graphics, business signage and digital printing services.  From start to finish they can design any sized job through
     computer designed proofs and customer interaction.  Quality is important to them.  All their services are manufactured in-house,
     providing you with a durable warranted product at a competitive price. Visit them at <a href="http://www.382sign.com/" target="_blank">www.382sign.com</a></p>
   
-  <a href="http://www.dentexpdr.com/" target="_blank"><img id="Dentex" src="/Sponsors/DentexNoBack.png" alt="Dentex" width="280" height="90"/></a>
+  <a href="http://www.dentexpdr.com/" target="_blank"><img id="Dentex" src="/Sponsors/DentexNoBack.png" alt="Dentex" width="280" height="90" /></a>
   <p>Dentex Paintless Dent Removal Ltd. is a locally owned Canadian company that takes pride in their workmanship and enjoys making your vehicle look new again.
     As Victoria's leader in paintless dent removal, Dentex has built a reputation for excellence over the past 2 decades while providing precision service to
     car dealers, bodyshops and individuals.  Using the innovative PDR process, which does not involve paint or body fillers, they make dents and dings disappear
     with fast affordable and environmentally friendly methods.  Check them out at <a href="http://www.dentexpdr.com/" target="_blank">dentexpdr.com</a></p>
   
-  <a href="http://www.lordco.com/" target="_blank"><img id="Lordco" src="/Sponsors/Lordco.png" alt="Lordco" width="300"/></a>
+  <a href="http://www.lordco.com/" target="_blank"><img id="Lordco" src="/Sponsors/Lordco.png" alt="Lordco" width="300" /></a>
   <p>With over 100 locations across BC, Lordco is the largest distributor and retailer of automotive parts and accessories. 
     Lordco stocks a complete line of auto body supplies, high performance parts and accessories, industrial and welding supplies,
     and a complete line of garage equipment and professional tools.  As Lordco strives to provide their valued customers with the
     highest level of service possible, visit them for your automotive needs. Visit them at <a href="http://www.lordco.com/" target="_blank">www.lordco.com</a></p>
   
-  <a href="http://www.used.ca/" target="_blank"><img id='Used.ca' src="/Sponsors/Used_Logo_Purple.png" alt="Used_Logo_Purple" width="50%"/></a>
+  <a href="http://www.used.ca/" target="_blank"><img id='Used.ca' src="/Sponsors/Used_Logo_Purple.png" alt="Used_Logo_Purple" width="300" /></a>
   <p>Canadian-owned and operated, Used.ca connects communities to the sharing economy in a fun, safe and family-friendly way. Founded in 2003 through
   a desire to reduce the amount of discarded, but still useful, items that were reaching landfills, Used.ca encourages users to #ThinkUsedFirst.
   Used.ca is dedicated to supporting local communities through the <a href="http://www.used.ca/community/usedhelps/" target="_blank">#UsedHelps</a> initiative. Users can donate the proceeds of their sales directly to participating registered Canadian charities.
   For more information, please visit: <a href="http://www.used.ca/" target="_blank">www.Used.ca</a>.</p>
   
-  <a href="http://westbaymechanical.com/" target="_blank"><img id="WestBayMechanical" src="/Sponsors/WestBayMechanical.png" alt="WestBayMechanical" width="250"/></a>
+  <a href="http://westbaymechanical.com/" target="_blank"><img id="WestBayMechanical" src="/Sponsors/WestBayMechanical.png" alt="WestBayMechanical" width="250" /></a>
   <p>West Bay Mechanical Ltd. From heat pumps to thermostats to boilers and more, explore the many products they sell and install in Residential settings. 
     They also meet Commercial needs and serve a wide variety of commercial, industrial and municipal clients on design builds and more. 
     Their service technicians offer decades of combined experience with a service department second to none in the region. Trusted for Quality, Reliability
     & Service for more than 40 years, choose West Bay Mechanical. <a href="http://westbaymechanical.com/" target="_blank">westbaymechanical.com</a></p>
   
-  <a href="http://islandtorque.com/" target="_blank"><img id="IslandTorque" src="/Sponsors/IslandTorqueConverter.png" alt="IslandTorque" width="240"/></a>
+  <a href="http://islandtorque.com/" target="_blank"><img id="IslandTorque" src="/Sponsors/IslandTorqueConverter.png" alt="IslandTorque" width="240" /></a>
   <p>Island Torque Converter and Drive Shaft Ltd is an automotive machine shop that specialises in repairing and manufacturing drive shafts and torque converters.
     They also machine flywheels, drums and rotors, and provide welding shop services. For a detailed list of their services visit 
     <a href="http://islandtorque.com/" target="_blank">islandtorque.com</a></p>
 
-  <a href="http://mamillerspub.com/" target="_blank"><img id="MaMillersPub" src="/Sponsors/MaMillersPub.png" alt="MaMillersPub" width="250"/></a>
+  <a href="http://mamillerspub.com/" target="_blank"><img id="MaMillersPub" src="/Sponsors/MaMillersPub.png" alt="MaMillersPub" width="250" /></a>
   <p>Ma Millers Pub welcomes you to join them for fresh menu items and a selection of domestic and craft beers on tap! Nestled in Langford between Sooke and Victoria,
     along the picturesque Goldstream Park you'll be glad you stopped in! Check out their menu at <a href="http://mamillerspub.com/" target="_blank">MaMillersPub.com</a></p>
   
-  <a href="https://www.hsminsurance.com/" target="_blank"><img id="HenrdrySwinton" src="/Sponsors/HenrdrySwinton.jpg" alt="Henrdry Swinton"  width="260"/></a>
+  <a href="https://www.hsminsurance.com/" target="_blank"><img id="HenrdrySwinton" src="/Sponsors/HenrdrySwinton.jpg" alt="Henrdry Swinton"  width="260" /></a>
   <p>Hendry, Swinton & McKenzie Insurance Service Inc. has been locally owned and operated in Victoria since 1983.  Specializing in commercial and home insurance products, 
     HSM provides you access to Canada's best and most competitively priced insurance markets. They pride themselves in being able to assess an individual's or company's
     risk profile and tailoring an insurance solution to best mitigate it. Hendry Swinton McKenzie Insurance; see Vikki and choose locally owned for your home and commercial
