--- a/src/ContactUs.html
+++ b/src/ContactUs.html
@@ -45,7 +45,7 @@
       </div>
     </div>
 
-    <a href="/"><img class="webbanner" src="/SISLRA/WebBanner.png" alt="SISLRA"></a>
+    <a href="/"><img class="webbanner" src="/SISLRA/WebBanner.png" alt="SISLRA" /></a>
 
     <table id="tableHeader">
       <tr>
@@ -98,9 +98,33 @@
               <li><a href="/Events.html#Posters">Posters</a></li>
             </ul>
           </li>
-          <li><a href="/Sponsors.html">Sponsors</a></li>
-          <li class="active"><a href="/ContactUs.html">Contact Us</a></li>
-          <li><a href="/AboutUs.html">About Us</a></li>
+          <li class="dropdown"><a href="/Sponsors.html">Sponsors <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="/Sponsors.html#BandDForklift">B&D Forklift</a></li>
+              <li><a href="/Sponsors.html#Searles">Searles</a></li>
+              <li><a href="/Sponsors.html#GraphicFX">GraphicFX</a></li>
+              <li><a href="/Sponsors.html#Dentex">Dentex</a></li>
+              <li><a href="/Sponsors.html#Lordco">Lordco</a></li>
+              <li><a href="/Sponsors.html#Used.ca">Used.ca</a></li>
+              <li><a href="/Sponsors.html#WestBayMechanical">West Bay Mechanical</a></li>
+              <li><a href="/Sponsors.html#IslandTorque">Island Torque</a></li>
+              <li><a href="/Sponsors.html#MaMillersPub">MaMillers Pub</a></li>
+              <li><a href="/Sponsors.html#HenrdrySwinton">Henrdry Swinton</a></li>
+              <li><a href="/Sponsors.html#SponsorshipInformation">Sponsorship Info.</a></li>
+            </ul>
+          </li>
+          <li class="dropdown active"><a href="/ContactUs.html">Contact Us <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="/ContactUs.html">Contact Us</a></li>
+              <li><a href="/ContactUs.html#links">Other Tracks and Clubs</a></li>
+            </ul>
+          </li>
+          <li class="dropdown"><a href="/AboutUs.html">About Us <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="/AboutUs.html">About Us</a></li>
+              <li><a href="/AboutUs.html#LOCATEDAT">Location</a></li>
+            </ul>
+          </li>
           <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="filetypes filetypes-pdf"></span> PDF<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="/RacersInfo/NewRacersInformation.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Racers Information</a></li>
@@ -108,12 +132,12 @@
             </ul>
           </li>
         </ul>
-        <ul class="nav navbar-nav navbar-right">
+        <div class="nav navbar-nav navbar-right">
           <a href="https://www.facebook.com/groups/327092727329942/" target="_blank" class="btn btn-primary" role="button" data-toggle="tooltip" data-placement="bottom" title="Facebook" style="color: #FFF;  margin-top: 4%;"><span class="social social-facebook"></span></a>
           <a href="https://twitter.com/DragRaceVic" target="_blank" class="btn btn-info" role="button" data-toggle="tooltip" data-placement="bottom" title="Twitter" style="color: #FFF;  margin-top: 4%;"><span class="social social-twitter"></span></a>
           <a href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank" class="btn btn-default" role="button" data-toggle="tooltip" data-placement="bottom" title="Instagram" style="color: #000;  margin-top: 4%;"><span class="social social-instagram"></span></a>
           <a href="https://www.youtube.com/user/nostopinLucR" target="_blank" class="btn btn-danger" role="button" data-toggle="tooltip" data-placement="bottom" title="YouTube" style="color: #FFF; margin-top: 4%;"><span class="social social-youtube"></span></a>          &nbsp;
-        </ul>
+        </div>
       </div>
     </nav>
     
@@ -129,10 +153,10 @@
   </div>
 
   <!--<div id="left">
-  </div> <!-- end of left -->
+  </div> end of left -->
 
   <!-- <div id="right">
-  </div> <!-- end of right -->
+  </div> end of right -->
 
   <div id="centerContactUs">
   
@@ -473,14 +497,15 @@
   
   <br>
 
-  <h1 id="links" style="text-align: center">Links</h1>
-    <p style="font-size:18px; text-align: center; margin: 0px;">Other Tracks and Clubs</p>
-      <li style="font-size:14px; text-align: center; list-style-type: none;"><a href="http://www.albernidragracing.com/" target="_blank">Alberni Valley Drag Racing</a></li>
-      <li style="font-size:14px; text-align: center; list-style-type: none;"><a href="http://www.missionraceway.com/" target="_blank">Mission Raceway Park</a></li>
-      <li style="font-size:14px; text-align: center; list-style-type: none;"><a href="http://www.northislandtimingassociation.com/" target="_blank">North Island Timing Association</a></li>
-      <li style="font-size:14px; text-align: center; list-style-type: none;"><a href="http://www.saratogaspeedway.bc.ca/" target="_blank">Saratoga Speedway</a></li>
-      <li style="font-size:14px; text-align: center; list-style-type: none;"><a href="http://www.westernspeedway.net/" target="_blank">Western Speedway</a></li>
-      
+  <h1 id="links" style="text-align: center">Other Tracks and Clubs</h1>
+    <ul style="font-size:14px; text-align: center; list-style-type: none;">
+      <li><a href="http://www.westernspeedway.net/" target="_blank">Western Speedway</a></li>
+      <li><a href="http://www.northislandtimingassociation.com/" target="_blank">North Island Timing Association</a></li>
+      <li><a href="https://vimsa.ca/" target="_blank">Vancouver Island Motorsports Association</a></li>
+      <li><a href="http://www.albernidragracing.com/" target="_blank">Alberni Valley Drag Racing</a></li>
+      <li><a href="http://www.missionraceway.com/" target="_blank">Mission Raceway Park</a></li>
+      <li><a href="http://www.saratogaspeedway.bc.ca/" target="_blank">Saratoga Speedway</a></li>
+    </ul>
   <br>
 
   </div> <!-- end of center -->
