--- a/src/Points.html
+++ b/src/Points.html
@@ -45,7 +45,7 @@
       </div>
     </div>
 
-    <a href="/"><img class="webbanner" src="/SISLRA/WebBanner.png" alt="SISLRA"></a>
+    <a href="/"><img class="webbanner" src="/SISLRA/WebBanner.png" alt="SISLRA" /></a>
 
     <table id="tableHeader">
       <tr>
@@ -98,9 +98,33 @@
               <li><a href="/Events.html#Posters">Posters</a></li>
             </ul>
           </li>
-          <li><a href="/Sponsors.html">Sponsors</a></li>
-          <li><a href="/ContactUs.html">Contact Us</a></li>
-          <li><a href="/AboutUs.html">About Us</a></li>
+          <li class="dropdown"><a href="/Sponsors.html">Sponsors <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="/Sponsors.html#BandDForklift">B&D Forklift</a></li>
+              <li><a href="/Sponsors.html#Searles">Searles</a></li>
+              <li><a href="/Sponsors.html#GraphicFX">GraphicFX</a></li>
+              <li><a href="/Sponsors.html#Dentex">Dentex</a></li>
+              <li><a href="/Sponsors.html#Lordco">Lordco</a></li>
+              <li><a href="/Sponsors.html#Used.ca">Used.ca</a></li>
+              <li><a href="/Sponsors.html#WestBayMechanical">West Bay Mechanical</a></li>
+              <li><a href="/Sponsors.html#IslandTorque">Island Torque</a></li>
+              <li><a href="/Sponsors.html#MaMillersPub">MaMillers Pub</a></li>
+              <li><a href="/Sponsors.html#HenrdrySwinton">Henrdry Swinton</a></li>
+              <li><a href="/Sponsors.html#SponsorshipInformation">Sponsorship Info.</a></li>
+            </ul>
+          </li>
+          <li class="dropdown"><a href="/ContactUs.html">Contact Us <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="/ContactUs.html">Contact Us</a></li>
+              <li><a href="/ContactUs.html#links">Other Tracks and Clubs</a></li>
+            </ul>
+          </li>
+          <li class="dropdown"><a href="/AboutUs.html">About Us <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="/AboutUs.html">About Us</a></li>
+              <li><a href="/AboutUs.html#LOCATEDAT">Location</a></li>
+            </ul>
+          </li>
           <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="filetypes filetypes-pdf"></span> PDF<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="/RacersInfo/NewRacersInformation.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Racers Information</a></li>
@@ -108,12 +132,12 @@
             </ul>
           </li>
         </ul>
-        <ul class="nav navbar-nav navbar-right">
+        <div class="nav navbar-nav navbar-right">
           <a href="https://www.facebook.com/groups/327092727329942/" target="_blank" class="btn btn-primary" role="button" data-toggle="tooltip" data-placement="bottom" title="Facebook" style="color: #FFF;  margin-top: 4%;"><span class="social social-facebook"></span></a>
           <a href="https://twitter.com/DragRaceVic" target="_blank" class="btn btn-info" role="button" data-toggle="tooltip" data-placement="bottom" title="Twitter" style="color: #FFF;  margin-top: 4%;"><span class="social social-twitter"></span></a>
           <a href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank" class="btn btn-default" role="button" data-toggle="tooltip" data-placement="bottom" title="Instagram" style="color: #000;  margin-top: 4%;"><span class="social social-instagram"></span></a>
           <a href="https://www.youtube.com/user/nostopinLucR" target="_blank" class="btn btn-danger" role="button" data-toggle="tooltip" data-placement="bottom" title="YouTube" style="color: #FFF; margin-top: 4%;"><span class="social social-youtube"></span></a>          &nbsp;
-        </ul>
+        </div>
       </div>
     </nav>
     
@@ -130,10 +154,10 @@
 
   <!--<div id="left">
 
-  </div> <!-- end of left -->
+  </div> end of left -->
 
   <!--<div id="right">
-   </div> <!-- end of right -->
+   </div> end of right -->
 
   <div id="center">
 
